# owa-adaptive

./: .gitignore  Abrir_Asesor.bat  CITATION.cff  Iniciar_Asesor.bat  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: OE_mapping.md  blueprint.md  guia_jurado.md  manual_usuario.md  verificacion.md
docs/img/: README.md
examples/: quickstart.py
paper/: paper.bib  paper.md
resultados/: README.md  reporte.html
scripts/: run_demo.py
src/owa_adaptive/: __init__.py  adaptive.py  api.py  backtest.py  cli.py  config.py  demo.py  investor.py  owa.py  profiles.py  quantifiers.py  recommender.py  regimes.py  scoring.py  spectral.py  viz.py
src/owa_adaptive/data/: __init__.py  loaders.py  synthetic.py
tests/: test_adaptive.py  test_backtest.py  test_data.py  test_investor.py  test_owa.py  test_profiles.py  test_quantifiers.py  test_recommender.py  test_spectral.py
