[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owa-adaptive"
version = "1.0.0"
description = "Motor de recomendación adaptativo para portafolios de renta variable bajo incertidumbre (OWA + perfiles conductuales)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Diego Fernando Quintero Avellaneda", email = "diego.fqa@gmail.com" },
]
keywords = ["OWA", "IOWA", "behavioral finance", "portfolio", "fuzzy", "uncertainty", "recommendation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
app = ["streamlit>=1.31", "matplotlib>=3.5"]
api = ["fastapi>=0.95", "uvicorn>=0.20", "pydantic>=1.10"]
data = ["yfinance>=0.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "matplotlib>=3.5"]
all = [
  "matplotlib>=3.5", "streamlit>=1.31",
  "fastapi>=0.95", "uvicorn>=0.20", "pydantic>=1.10",
  "yfinance>=0.2", "pytest>=7.0", "pytest-cov>=4.0",
]

[project.scripts]
owa-demo = "owa_adaptive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
owa_adaptive = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["owa_adaptive"]
